fix: fix `.input-wrapper .input` wrong font-size

--- a/components/input.scss
+++ b/components/input.scss
@@ -93,6 +93,7 @@
     flex: auto;
     width: auto;
     padding: 0;
+    font-size: inherit;
     border-color: transparent;
     border-style: none;
     border-width: 0;
